# auto_path_generater_0

./: .gitignore  AGENTS.md  CHANGELOG.md  HJMB_V40_三模式文件结构设计.txt  HJMB_path_file_protocol_v2.0.txt  HJMB_path_file_protocol_v2.5.txt  HJMB_path_file_protocol_v3.0.txt  HJMB_path_file_protocol_v3.2.txt  HJMB_path_file_protocol_v3.3.txt  HJMB_path_file_protocol_v3.4.txt  HJMB_path_file_protocol_v3.5.txt  HJMB_path_file_protocol_v4.0.txt  P0000.json  P0001.json  README.md  TARGET.md  TARGETS.md  batch_generator.py  batch_models.py  example_path.json  fixed_sites_v35.json  hjmb_path_editor.py  leg_library.json  leg_template_instances.json  leg_templates.json  path_codec_cli.py  path_geometry.py  path_models.py  planning_parameters_v40.json  project.json  pyproject.toml  route_case_table.json  test_batch_v35.py  test_hjmb_path_editor_v33.py  test_hjmb_path_editor_v35.py  test_path_codec_v25.py  test_path_codec_v33.py  test_path_codec_v35.py  test_path_geometry_v33.py  test_path_geometry_v35.py  (+9 more)
docs/: 360批量生成.md  FIELD_LAYOUT.md  V3.5迁移.md  architecture.md  atomic_writes.md  baseline_audit.md  bin_io.md  candidate_plans.md  case_drafts.md  collision_configuration.md  collision_model.md  continuous_collision_check.md  curve_representation.md  development.md  final_export_workflow.md  gui_actions.md  gui_field_editor.md  gui_fixed_sites.md  gui_manual_free.md  gui_regression_fix.md  gui_route_leg.md  json_io.md  leg_clear_and_regenerate.md  leg_definition.md  leg_library.md  leg_optimizer.md  leg_templates.md  manual_free_workflow.md  output_mode_layout.md  path_validation.md  (+34 more)
(+286 files in other folders)
